--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://xinfengriver.github.io" # the base hostname & protocol for your si
 #github_username:  jekyll
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
